2003-03-04  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-filter-charset.c (filter_filter): Set outlen equal
	to outbuf - filter->outbuf - this is a much clearer way to
	calculate the outlen. The other way might have even been wrong.
	(filter_complete): Same.

2003-03-02  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Bumped version to 2.0.3

	* configure.in: Bumped version to 2.0.3

	* gmime/gmime-iconv.c (iconv_cache_bucket_new): If the current
	list of cache buckets is non-NULL, set list->prev to the new
	bucket being prepended.
	(g_mime_iconv_open): Only expire unused if the cache size is
	greater than the max allowable size.

2003-02-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-filter.c (stream_read): Set priv->flushed to
	TRUE if we call g_mime_filter_complete() on our filters.
	(stream_eos): It's not actually the end of the stream until we've
	flushed the filters. This fixes some possible truncation when
	reading from a filtered stream.

2003-02-13  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Bumped version to 2.0.2

	* configure.in: Bumped version to 2.0.2

	* gmime/gmime-parser.c (parser_scan_content): Stop looping if/when
	we find EOS in all cases. Also handle the case where an
	[end-]boundary ends an an EOS rather than a new-line.

2003-02-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/url-scanner.c (g_url_file_end): If the file:// url is
	preceded with some sort of brace, when scanning for the end of the
	url - take this into consideration.
	(g_url_web_end): Same.

2003-02-13  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-gpg-context.c: #include <sys/time.h>

2003-02-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/url-scanner.c: Fixed the table to treat >=127 as a CTRL
	character.

	* gmime/gtrie.c (trie_utf8_getc): When we encounter an invalid
	UTF-8 sequence, update in to point to in+1 and return 0xffff.
	(g_trie_add): Handle invalid UTF-8 sequences (ie, c == 0xffff).
	(g_trie_search): Same.
