@@ -32,6 +32,7 @@ dnl Checks for programs.
 AC_ISC_POSIX
 AC_PROG_CC
 AM_PROG_CC_STDC
+AC_C_INLINE
 dnl AC_HEADER_STDC
 AC_STDC_HEADERS
 AC_ARG_PROGRAM
