@@ -1,3 +1,12 @@
+2003-03-06  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* configure.in: Check that the compiler supports the inline
+	optimisation keyword (or variant) and #define it to 'inline'.
+
+	* gmime/gtrie.c (trie_utf8_getc): Same.
+
+	* gmime/gmime-filter-html.c (html_utf8_getc): Use the inline macro.
+
 2003-03-04  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* gmime/gmime-filter-charset.c (filter_filter): Set outlen equal
